--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,31 +43,11 @@
 	transform: rotate(360deg);
 }
 
-#fccsvg:hover {
-	animation: shake 0.8s !important;
-}
-
-@keyframes shake {
-	0% {
-		transform: rotate(1deg) translate (1px,1px);
-	}
-	25% {
-		transform: rotate(-1deg) translate (-1px,-1px);
-	}
-	50% {
-		transform: rotate(1deg) translate (-1px,1px);
-	}
-	75% {
-		transform: rotate(-1deg) translate (1px,-1px);
-	}
-	100% {
-		transform: rotate(1deg) translate (-1px,2px);
-	}
-}
-
 ul {
 	list-style: none;
 	padding: 0 0 0 0;
+	display: flex;
+	justify-content: space-around;
 }
 
 li {
@@ -76,8 +56,7 @@ li {
 
 #logos {
 	width: 436px;
-	display: flex;
-	justify-content: space-around;
+	display: block;
 	margin: auto;
 }
 
