--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,62 +46,16 @@ body {
 	font-family: 'Playfair Display', serif !important;
 	margin-top: 50px !important;
 	margin-bottom: 50px !important;
-	width: 70%;
+	max-width: 55rem;
 	margin: auto;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-size: 20px;
 }
 
-.viewable-image {
-	width: 700px;
-	height: 464px;
+#slides-container {
+	max-width: 55rem;
 	margin: auto;
-	overflow: hidden;
-	text-align: center;
-	margin-bottom: 50px !important;
-	object-fit: cover;
-}
-
-.all-images {
-	width: 2100px;
-	height: 464px;
-	position: relative;
-	transition: left 1.5s;
-	-webkit-transition: left 1.5s;
-}
-
-.carousel-image {
-	float: left;
-	margin: 0px;
-	padding: 0px;
-}
-
-.nav-container {
-	top: -30px;
-	position: relative;
-}
-
-.nav-button {
-	display: inline-block;
-	height: 10px;
-	width: 10px;
-	border-radius: 50%;
-	margin: 4px;
-	background-color: burlywood;
-	transition: background-color 0.5s ease;
-}
-
-.nav-button:hover {
-	background-color: cadetblue;
-}
-
-#carousel-image-1:target ~ .all-images {
-	left: 0px;
-}
-
-#carousel-image-2:target ~ .all-images {
-	left: -700px;
-}
-
-#carousel-image-3:target ~ .all-images {
-	left: -1400px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
