--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,8 @@
 }
 
 .logo {
-	width: 50px;
-	height: 50px;
+	width: 45px;
+	height: 45px;
 	display: block;
 	margin: auto;
 	-webkit-transition: 1s ease-in-out;
@@ -32,9 +32,11 @@ li {
 }
 
 #logos {
-	width: 316px;
+	width: 260px;
 	display: block;
 	margin: auto;
+	margin-bottom: -20px;
+	margin-top: -20px;
 }
 
 body {
@@ -58,4 +60,54 @@ body {
 	margin: auto;
 	padding-left: 10px;
 	padding-right: 10px;
+	margin-bottom: 5rem;
+	text-align: center;
+	position: relative;
+}
+
+#slides-container:hover .buttons {
+	color: black;
+	background-color: rgba(255,255,255, 0.7);
+	-webkit-transition-property: color background-color;
+	-webkit-transition-duration: 0.7s;
+    -webkit-transition-timing-function: ease;
+    transition-property: color background-color;
+    transition-duration: 0.7s;
+    transition-timing-function: ease;
+}
+
+.slides {
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
+
+.buttons {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	border: 0px;
+	color: rgba(0, 0, 0, 0);
+	background-color: rgba(0, 0, 0, 0);
+	font-weight: bold;
+	border-radius: 3px;
+	font-size: 23px;
+	/* display: none; */
+	/* transition: display 2s ease; */
+	-webkit-transition-property: color background-color;
+	-webkit-transition-duration: 0.7s;
+    -webkit-transition-timing-function: ease;
+    transition-property: color background-color;
+    transition-duration: 0.7s;
+    transition-timing-function: ease;
+} 
+
+#right-button {
+	right: 20px;
+}
+
+#left-button {
+	left: 20px;
 }
